--- a/src/components/containers/BodyWrapper/BodyWrapper.module.scss
+++ b/src/components/containers/BodyWrapper/BodyWrapper.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   gap: 1.875rem;
   width: 100%;
+  height: 100%;
   @include BoundingBox;
   background: color.$background-main-light;
   padding: 1.25rem 1.25rem 1.5625rem 1.25rem;
