Reinstalled dependencies, fixed styles

--- a/src/components/layout/Sidebar/Sidebar.module.scss
+++ b/src/components/layout/Sidebar/Sidebar.module.scss
@@ -10,7 +10,7 @@
     background: color.$color-white-primary;
     box-shadow: color.$shadow-box-light;
     border-radius: 1.5rem;
-    min-height: 75.0625rem;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
