--- a/src/styles/pages/Profile.module.scss
+++ b/src/styles/pages/Profile.module.scss
@@ -12,6 +12,7 @@
 
   &Title {
     @include navTitle;
+    width: fit-content;
   }
 
   &MainContainer {
@@ -26,7 +27,6 @@
     max-width: 16.5625rem;
     &Container {
       @include sidebar;
-      min-height: 64.125rem;
     }
   }
 
