--- a/src/styles/base/colors/_colors.scss
+++ b/src/styles/base/colors/_colors.scss
@@ -31,3 +31,5 @@ $border-loader: rgba(0, 0, 0, 0.1);
 $border-neutral: #e6ebf5;
 $background-switcher: #ced5e0;
 $color-status-success: #38cb89;
+$color-scrollbar-thumb: #d3dbeb;
+$color-scrollbar-track: rgba(#ebf0fa, 0.48);
