--- a/src/components/projects/ProjectsBoardTasks/ProjectsBoardTasks.module.scss
+++ b/src/components/projects/ProjectsBoardTasks/ProjectsBoardTasks.module.scss
@@ -1,6 +1,6 @@
-@use '../../../styles/abstracts/mixins/mixins' as *;
-@use '../../../styles/base/colors/colors' as color;
-@use '../../../styles/base/globals/globals' as size;
+@use "../../../styles/abstracts/mixins/mixins" as *;
+@use "../../../styles/base/colors/colors" as color;
+@use "../../../styles/base/globals/globals" as size;
 
 .projectsBoardTasks {
   width: 100%;
@@ -17,6 +17,7 @@
 .boardTasksItems {
   display: flex;
   align-items: center;
+  gap: 1.875rem;
   justify-content: space-between;
 
   & > .boardTasksItem {
