--- a/src/styles/base/globals/_globals.scss
+++ b/src/styles/base/globals/_globals.scss
@@ -1,19 +1,19 @@
-$font-size-xxs: 0.5rem;
-$font-size-xs: 0.625rem;
-$font-size-sm: 0.75rem;
-$font-size-md: 0.875rem;
-$font-size-lg: 1rem;
-$font-size-xl: 1.125rem;
-$font-size-xxl: 1.25rem;
-$font-size-2xl: 1.375rem;
-$font-size-xxxl: 1.5rem;
-$font-size-3xl: 1.85rem;
-$font-size-4xl: 2rem;
-$font-size-4xxl: 2.25rem;
-$font-size-5xl: 2.5rem;
-$font-size-6xl: 3rem;
-$font-size-6xxl: 3.375rem;
-$font-size-7xl: 3.5rem;
-$font-size-8xl: 4rem;
-$font-size-9xl: 4.5rem;
-$font-size-10xl: 6.25rem;
+$font-size-xxs: 0.5rem; // 8px
+$font-size-xs: 0.625rem; // 10px
+$font-size-sm: 0.75rem; // 12px
+$font-size-md: 0.875rem; // 14px
+$font-size-lg: 1rem; // 16px
+$font-size-xl: 1.125rem; // 18px
+$font-size-xxl: 1.25rem; // 20px
+$font-size-2xl: 1.375rem; // 22px
+$font-size-xxxl: 1.5rem; // 24px
+$font-size-3xl: 1.85rem; // 29.6px
+$font-size-4xl: 2rem; // 32px
+$font-size-4xxl: 2.25rem; // 36px
+$font-size-5xl: 2.5rem; // 40px
+$font-size-6xl: 3rem; // 48px
+$font-size-6xxl: 3.375rem; // 54px
+$font-size-7xl: 3.5rem; // 56px
+$font-size-8xl: 4rem; // 64px
+$font-size-9xl: 4.5rem; // 72px
+$font-size-10xl: 6.25rem; // 100px
